--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,10 @@
 
     <body>
         <h1>Hearty Vegetable Lasagna</h1>
+
+        <img src="../images/lasagna.jpg" 
+            width="400"
+            height="400"
+            alt="Image of Lasagna">
     </body>
 </html>
