Add heading and description

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,5 +12,11 @@
             width="400"
             height="400"
             alt="Image of Lasagna">
+        
+        <h2>Description</h2>
+        <p>A quick and easy recipe for a <strong>Hearty Vegetable Lasagna</strong>. 
+            The cook time for this recipe is a total of <em>1 hour</em>. The preparation time
+            is <em>40 minutes</em>. This delicious meal serves a total of <em>12 servings</em>. Perfect
+            for having guests over for a nice relaxing night with a healthy meal.</p>
     </body>
 </html>
