--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -18,5 +18,21 @@
             The cook time for this recipe is a total of <em>1 hour</em>. The preparation time
             is <em>40 minutes</em>. This delicious meal serves a total of <em>12 servings</em>. Perfect
             for having guests over for a nice relaxing night with a healthy meal.</p>
+        
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 (16 Oz.) package lasagna noodles</li>
+            <li>1 lbs. fresh mushrooms, sliced</li>
+            <li>3/4 cup chopped green bell pepper</li>
+            <li>3/4 cup chopped onion</li>
+            <li>3 cloves garlic, minced</li>
+            <li>2 tablespoons vegetable oil</li>
+            <li>2 (26 Oz.) jars pasta sauce</li>
+            <li>1 teaspoon dried basil</li>
+            <li>1 (15 Oz.) container part-skim ricotta cheese</li>
+            <li>4 cups shredded mozzarella cheese</li>
+            <li>2 eggs</li>
+            <li>1/2 cup grated Parmesan cheese</li>
+        </ul>
     </body>
 </html>
