Add heading and steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -34,5 +34,21 @@
             <li>2 eggs</li>
             <li>1/2 cup grated Parmesan cheese</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Cook the lasagna noodles in a large pot of boiling water for <em>10 minutes</em>,
+                or until <em>al dente</em>. Rinse with cold water, and drain</li>
+            <li>In a large saucepan, cook and stir mushrooms, green peppers, onion, and garlic
+                in oil. Stir in pasta sauce and basil; bring to a boil. Reduce heat, and simmer
+                for <em>15 minutes</em>.</li>
+            <li>Mix together ricotta, 2 cups mozzarella cheese, and eggs.</li>
+            <li>Preheat oven to <em>350 degrees F (175 degrees C)</em>. Spread 1 cup tomato sauce
+                into the bottom of a greased 9x13 inch baking dish. Layer 1/2 each, lasagna noodles,
+                ricotta mix, sauce, and Parmesan cheese. Repeat layering, and top with remaining 2
+                cups mozzarella cheese.</li>
+            <li>Bake, uncovered, for <em>40 minutes</em>. Let stand for <em>15 minutes</em> before
+                serving.</li>
+        </ol>
     </body>
 </html>
