Add steps header and list

--- a/recipes/bacon.html
+++ b/recipes/bacon.html
@@ -25,6 +25,15 @@
             <li>Bacon</li>
         </ul>
 
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to <em>350 degrees F (175 degrees C)</em>. Line a baking sheet with
+                aluminum foil. Arrange bacon on baking sheet in a single layer with the edges 
+                touching or slightly overlapping.</li>
+            <li>Bak in preheated oven to desired degree of doneness; <em>10-15 minutes</em>. 
+                Remove bacon from baking sheet with tongs, and drain on a paper-towel lined
+                plate.</li>
+        </ol>
         
     </body>
 </html>
