--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <h1>Odin Recipes</h1>
 
         <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/bacon.html">Crispy Bacon</a></li>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/bacon.html">Crispy Bacon</a></li>
+            <li><a href="recipes/sandwich.html">Reuben Sandwich</a></li>
         </ul>
 
     </body>
