Add description header and paragraph

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -11,5 +11,12 @@
             height="400"
             width="500"
             alt="Image of sandwich">
+        
+        <h2>Description</h2>
+        <p>Simple, delicious sandwich for a tasty lunch. Makes for a quick snack or
+            can be paired with your choice of soup. Cook time is <em>10 minutes</em>. 
+            Preparation time is <em>15 minutes</em>. This recipe makes us a total of
+            4 servings.</p>
+            
     </body>
 </html>
