Add ingredients header and list

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -17,6 +17,15 @@
             can be paired with your choice of soup. Cook time is <em>10 minutes</em>. 
             Preparation time is <em>15 minutes</em>. This recipe makes us a total of
             4 servings.</p>
-            
+        
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 tablspoons butter</li>
+            <li>8 slices rye bread</li>
+            <li>8 slices deli sliced corned beef</li>
+            <li>8 slices Swiss cheese</li>
+            <li>1 cup sauerkraut, drained</li>
+            <li>1/2 cup Thousand Islands dressing</li>
+        </ul>
     </body>
 </html>
