Add steps header and list

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -27,5 +27,16 @@
             <li>1 cup sauerkraut, drained</li>
             <li>1/2 cup Thousand Islands dressing</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat a large skillet or griddle on medium heat.</li>
+            <li>Lightly butter one side of all bread slices. Spread non-buttered sides 
+                with Thousand Islands dressing. On 4 bread slices, layer 1 slice Swiss
+                Cheese, 2 slices corned beef, 1/4 cup sauerkraut and second slice of
+                Swiss cheese. Top with remaining bread slices, buttered sides facing out.</li>
+            <li>Grill sandwiches until both sides are golden brown, about <em>5 minutes</em> per 
+                side. Serve hot.</li>
+        </ol>
     </body>
 </html>
