--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Odin Recipes</h1>
 
+        <img class="chef" src="images/chef.jpg" alt="Chef image">
+
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/bacon.html">Crispy Bacon</a></li>
