Edit links to button links

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <img class="chef" src="images/chef.jpg" alt="Chef image">
 
         <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/bacon.html">Crispy Bacon</a></li>
-            <li><a href="recipes/sandwich.html">Reuben Sandwich</a></li>
+            <li><a href="recipes/lasagna.html"><button class="lasagna">Lasagna</button>
+            </a></li>
+            <li><a href="recipes/bacon.html"><button class="bacon">Crispy Bacon</button>
+            </a></li>
+            <li><a href="recipes/sandwich.html"><button class="sandwich">Reuben Sandwich</button>
+            </a></li>
         </ul>
 
     </body>
