Remove unordered list

--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
 
         <img class="chef" src="images/chef.jpg" alt="Chef image">
 
-        <ul>
-            <li><a href="recipes/lasagna.html"><button class="lasagna">Lasagna</button>
-            </a></li>
-            <li><a href="recipes/bacon.html"><button class="bacon">Crispy Bacon</button>
-            </a></li>
-            <li><a href="recipes/sandwich.html"><button class="sandwich">Reuben Sandwich</button>
-            </a></li>
-        </ul>
-
+            <a href="recipes/lasagna.html"><button class="lasagna">Lasagna</button>
+            </a>
+            <a href="recipes/bacon.html"><button class="bacon">Crispy Bacon</button>
+            </a>
+            <a href="recipes/sandwich.html"><button class="sandwich">Reuben Sandwich</button>
+            </a>
     </body>
 </html>
