Re-add unordered list

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
+        <ul>
         <img class="chef" src="images/chef.jpg" alt="Chef image">
 
-            <a href="recipes/lasagna.html"><button class="lasagna">Lasagna</button>
-            </a>
-            <a href="recipes/bacon.html"><button class="bacon">Crispy Bacon</button>
-            </a>
-            <a href="recipes/sandwich.html"><button class="sandwich">Reuben Sandwich</button>
-            </a>
+            <li><a href="recipes/lasagna.html"><button class="lasagna">Lasagna</button>
+            </a></li>
+            <li><a href="recipes/bacon.html"><button class="bacon">Crispy Bacon</button>
+            </a></li>
+            <li><a href="recipes/sandwich.html"><button class="sandwich">Reuben Sandwich</button>
+            </a></li>
+        </ul>
     </body>
 </html>
