Add class to h1 element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Odin Recipes</h1>
         <ul>
         <img class="chef" src="images/chef.jpg" alt="Chef image">
 
