--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Lasagna Recipe</title>
+        <link rel="stylesheet" href="styles-lasagna.css">
     </head>
 
     <body>
@@ -14,13 +15,13 @@
             alt="Image of Lasagna">
         
         <h2>Description</h2>
-        <p>A quick and easy recipe for a <strong>Hearty Vegetable Lasagna</strong>. 
+        <p class="description">A quick and easy recipe for a <strong>Hearty Vegetable Lasagna</strong>. 
             The cook time for this recipe is a total of <em>1 hour</em>. The preparation time
             is <em>40 minutes</em>. This delicious meal serves a total of <em>12 servings</em>. Perfect
             for having guests over for a nice relaxing night with a healthy meal.</p>
         
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="directions ingredients">
             <li>1 (16 Oz.) package lasagna noodles</li>
             <li>1 lbs. fresh mushrooms, sliced</li>
             <li>3/4 cup chopped green bell pepper</li>
@@ -36,7 +37,7 @@
         </ul>
 
         <h2>Steps</h2>
-        <ol>
+        <ol class="directions steps">
             <li>Cook the lasagna noodles in a large pot of boiling water for <em>10 minutes</em>,
                 or until <em>al dente</em>. Rinse with cold water, and drain</li>
             <li>In a large saucepan, cook and stir mushrooms, green peppers, onion, and garlic
