--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
     <body>
         <h1 class="title">Odin Recipes</h1>
-        <ul>
-        <img class="chef" src="images/chef.jpg" alt="Chef image">
-
+        <img class="chef" src="images/gordon.jpg" alt="Chef image">
+        <ul class="list">
             <li><a href="recipes/lasagna.html"><button class="lasagna">Lasagna</button>
             </a></li>
             <li><a href="recipes/bacon.html"><button class="bacon">Crispy Bacon</button>
